2009-01-16  Matias De la Puente  <mfpuente.ar@gmail.com>

	*  watray/watrayprojectspanel.vala:
	*  watray/watrayplugininfo.vala:
	*  watray/watraymainwindow.vala:
	*  watray/watraypluginmanagerview.vala:
	*  watray/watraypluginmanager.vala:
	*  watray/watrayplugin.vala:
	
	Code cleanup.
	
	*  po/es.po:

	Update spanish translation.

2009-01-16  Matias De la Puente  <mfpuente.ar@gmail.com>

	*  po/es.po:

	Update spanish translation of the about and configure plugin buttons.

2009-01-16  Matias De la Puente  <mfpuente.ar@gmail.com>

	*  configure.ac:
	*  watray/watraypreferencemanager.vala:
	*  watray/watrayprojectspanel.vala:
	*  watray/watraymainwindow.vala:
	*  watray/Makefile.am:

	Added basic support for gconf.

	*  watray/watraypluginmanagerview.vala:

	Added about and configure plugin buttons.

2009-01-15  Matias De la Puente  <mfpuente.ar@gmail.com>

	* pixmaps/:
	* configure.ac:
	* Makefile.am:
	
	Remove pixmaps files. Not used for now

2009-01-13  Matias De la Puente  <mfpuente.ar@gmail.com>

	*  watraysimple/simple.watrayplugin:
	*  watray/watrayplugininfo.vala:
	*  watray/watraypluginmanagerview.vala:

	Added support for stock-id icons in plugins.
	Add icon field in watraysimple plugin information file.

2009-01-13  Matias De la Puente  <mfpuente.ar@gmail.com>

	*  watray/watraypluginmanagerview.vala:
	
	Fix creation year.
	
	*  po/es.po:
	*  po/POTFILES.skip:
	*  po/POTFILES.in:

	Added spanish translation of PluginManagerView and PreferenceDialog

2009-01-13  Matias De la Puente  <mfpuente.ar@gmail.com>

	*  watray/watraymainwindow.vala:
	*  watray/watraypluginmanagerview.vala:
	*  watray/watraypluginmanager.vala:
	*  watray/watraypreferencedialog.vala:
	*  watray/Makefile.am:

	Added preferences dialog with plugins tab.

2009-01-12  Matias De la Puente  <mfpuente.ar@gmail.com>

	*  watray/watrayprojectspanel.vala:
	*  watray/watrayprojectspanelinterface.vala:

	Added error handling to the project panel to check if the project was